# swfme-python

./: .gitignore  DEVELOPER_GUIDE.md  LEARNINGS.md  LICENSE  README.md  STORAGE_API_GUIDE.md  pyproject.toml  server.py
.github/workflows/: dev.yml  publish.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: LiveFlow.tsx  WorkflowForm.tsx  WorkflowShelf.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
examples/: math_workflow.py  simple_workflow.py
swfme/api/: app.py  routes.py
swfme/core/: __init__.py  logging.py  parameters.py  process.py
swfme/monitoring/: event_bus.py  metrics.py
swfme/registry/: process_registry.py
tests/: test_event_bus.py  test_metrics.py  test_parameters.py  test_process.py
