[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swfme"
version = "0.1.0"
description = "Process-Oriented Programming Framework for Python - Workflow Management Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alex Popovic", email = "alex@arkturian.com"}
]
keywords = [
    "workflow",
    "orchestration",
    "process",
    "pipeline",
    "monitoring",
    "async",
    "process-oriented-programming"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Core async support (built-in, no external deps needed)
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]
all = [
    "swfme[api,dev]"
]

[project.urls]
Homepage = "https://github.com/apopovic77/swfme-python"
Documentation = "https://github.com/apopovic77/swfme-python#readme"
Repository = "https://github.com/apopovic77/swfme-python"
Issues = "https://github.com/apopovic77/swfme-python/issues"

[tool.setuptools]
packages = ["swfme", "swfme.core", "swfme.monitoring", "swfme.api", "swfme.registry"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
